Ahora se puede guardar el entrenamiento,descartarlo, agregar series y eliminar items
