# backend/src/main/java/com/myfitnessapp/dto/response/EntrenoRes.java
@@ -1,12 +1,11 @@
 package com.myfitnessapp.dto.response;
 
+import java.time.LocalDateTime;
+import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
-
-import java.time.LocalDateTime;
-import java.util.List;
 
 @Data
 @AllArgsConstructor
@@ -16,8 +15,8 @@ public class EntrenoRes {
     private Integer id;
     private Integer rutinaId;
     private String rutinaNombre;
-    private LocalDateTime inicio;
-    private Integer duracionEnMinutos;
+    private LocalDateTime fecha;
+    private Long duracionEnSeg;
     private Integer volumenEnKg;
     private Integer nroDeSeries;
     private List<ItemRutinaRes> items;
